FIX MOBILE NAVBAR SPACING

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -117,15 +117,15 @@ a {
 
 @media only screen and (max-width: 730px) {
 	#navbar {
-		row-gap: 0.5em;
-		padding: 1.5em 0;
+		row-gap: 0.8em;
+		padding: 2.5em 0;
 		align-items: center;
 		display: inline-flex;
 		flex-direction: column;
 	}
 	#nav_links_container {
-		width: 100%;
-		justify-content: space-around;
+		width: 90%;
+		justify-content: space-evenly;
 	}
 }
 
